# function-calling-data-synthesizer

./: .amlignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yaml
.github/workflows/: ci.yml
data/examples/: functions_definition.json  seed_qa_dataset.jsonl
pipelines/: create_aml_custom_env.yaml  main.yaml  register_functions_definition.yaml  register_seed_qa_dataset.yaml
prompts/: generator_config.yaml  semantic_checker.txt  system_prompt.txt
src/: apply_chat_message_format.py  custom_exceptions.py  format_checker.py  generate_synthetic_pairs.py  inference.py  log_handlers.py  semantic_checker.py  split_data.py  verify_generated_query_answer_pairs.py
tests/: test_format_checker.py  test_generate_synthetic_pairs.py  test_inference.py  test_semantic_checker.py
