[tool.poetry]
name = "function-calling-data-synthesizer"
version = "0.1.0"
description = ""
authors = ["Kosuke Fujimoto <kofuji@microsoft.com>"]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pytest = "^8.4.1"
ruff = "^0.12.11"
mypy = "^1.17.1"
pytest-cov = "^6.2.1"
ipykernel = "^6.30.1"
pytest-mock = "^3.14.1"


[tool.poetry.dependencies]
python = "=3.12.9"
types-pyyaml = "^6.0.12.20250822"
python-dotenv = "^1.1.1"
tenacity = "^9.1.2"
pyyaml = "^6.0.2"
azure-ai-inference = "^1.0.0b6"
azure-core = "^1.35.0"
asyncio = "^4.0.0"
aiohttp = "^3.12.15"
jsonlines = "^4.0.0"
tqdm = "^4.67.0"
scikit-learn = "^1.7.1"
azure-ai-ml = "^1.28.1"
azure-identity = "^1.24.0"
pytest-asyncio = "^1.1.0"
azureml-mlflow = "^1.60.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath="src"

[tool.coverage.run]
omit = [
    # ignore all tests in src
    "*/tests/*",
    "**/__init__.py"
]
