[tool.poetry]
name = "function-calling-data-synthesizer"
version = "0.1.0"
description = ""
authors = ["Kosuke Fujimoto <kofuji@microsoft.com>"]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
pytest = "^9.0.2"
ruff = "^0.14.10"
mypy = "^1.19.1"
pytest-cov = "^7.0.0"
ipykernel = "^7.1.0"
pytest-mock = "^3.15.1"


[tool.poetry.dependencies]
python = "=3.12.9"
types-pyyaml = "^6.0.12.20250915"
python-dotenv = "^1.2.1"
tenacity = "^9.1.2"
pyyaml = "^6.0.3"
azure-ai-inference = "^1.0.0b6"
azure-core = "^1.38.0"
asyncio = "^4.0.0"
aiohttp = "^3.13.3"
jsonlines = "^4.0.0"
tqdm = "^4.67.0"
scikit-learn = "^1.8.0"
azure-ai-ml = "^1.31.0"
azure-identity = "^1.25.1"
pytest-asyncio = "^1.3.0"
azureml-mlflow = "^1.61.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath="src"

[tool.coverage.run]
omit = [
    # ignore all tests in src
    "*/tests/*",
    "**/__init__.py"
]
